# linux-gpio-http-server

./: .gitmodules  99-linux-gpio-http-server-gpio.rules  LICENSE  README.md  example.yaml  linux-gpio-http-server.service  pyproject.toml
src/linux_gpio_http_server/: __init__.py
